--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   flutter_svg: ^1.1.0
-  transformer_page_view: ^0.1.6
+  another_transformer_page_view: ^2.0.0
 
 
 dev_dependencies:
